--- a/.github/workflows/infoleg_update.yml
+++ b/.github/workflows/infoleg_update.yml
@@ -18,3 +18,12 @@ jobs:
 
       - name: Ejecutar script de descarga
         run: python scripts/descargar_infoleg.py
+
+ name: Subir datasets actualizados al repo
+  run: |
+    git config user.name "github-actions[bot]"
+    git config user.email "github-actions[bot]@users.noreply.github.com"
+    git add data/*.csv
+    git commit -m "Actualización automática de datasets Infoleg"
+    git push
+
