--- a/.github/workflows/infoleg_update.yml
+++ b/.github/workflows/infoleg_update.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Ejecutar script de descarga
         run: python scripts/descargar_infoleg.py
 
- name: Subir datasets actualizados al repo
-  run: |
-    git config user.name "github-actions[bot]"
-    git config user.email "github-actions[bot]@users.noreply.github.com"
-    git add data/*.csv
-    git commit -m "Actualización automática de datasets Infoleg"
-    git push
+      - name: Subir datasets actualizados al repo
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/*.csv
+          git commit -m "Actualización automática de datasets Infoleg" || echo "Sin cambios para commitear"
+          git push
 
