--- a/.github/workflows/infoleg_update.yml
+++ b/.github/workflows/infoleg_update.yml
@@ -20,8 +20,11 @@ jobs:
 
       - name: Ejecutar script de descarga
         env:
-          DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
+          DROPBOX_REFRESH_TOKEN: ${{ secrets.DROPBOX_REFRESH_TOKEN }}
+          DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+          DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
         run: python scripts/descargar_infoleg.py
+
 
       - name: Subir datasets actualizados al repo
         run: |
