--- a/.github/workflows/infoleg_update_and_create.yml
+++ b/.github/workflows/infoleg_update_and_create.yml
@@ -25,9 +25,9 @@ jobs:
       # ============================================================
       - name: Ejecutar descargar_infoleg.py
         env:
-          DROPBOX_REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-          DROPBOX_CLIENT_ID: ${{ secrets.APP_KEY }}
-          DROPBOX_CLIENT_SECRET: ${{ secrets.APP_SECRET }}
+          APP_KEY: ${{ secrets.APP_KEY }}
+          APP_SECRET: ${{ secrets.APP_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
         run: python scripts/descargar_infoleg.py
 
       # ============================================================
