--- a/.github/workflows/digesto_master_pipeline.yml
+++ b/.github/workflows/digesto_master_pipeline.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           python - << 'EOF'
           import pandas as pd
-          from scripts.scraper_fichas_dropbox import obtener_ficha
+          from scripts.scraper_fichas_infoleg import obtener_ficha
 
           df = pd.read_csv("data_procesada/digesto_normas.csv", dtype=str)
 
