--- a/.github/workflows/digesto_master_pipeline.yml
+++ b/.github/workflows/digesto_master_pipeline.yml
@@ -69,9 +69,52 @@ jobs:
         run: python scripts/sync_fichas_dropbox.py
 
       # ------------------------------
-      # 6) Construir telaraña
+      # 6) Subir digesto_relaciones.csv a dropbox
       # ------------------------------
-      - name: 6) Construir telaraña jurídica
+
+      - name: Subir digesto_relaciones.csv a Dropbox
+        run: |
+          python - << 'EOF'
+          import os, json, requests
+
+          token_url = "https://api.dropbox.com/oauth2/token"
+          upload_url = "https://content.dropboxapi.com/2/files/upload"
+
+          APP_KEY = os.environ["APP_KEY"]
+          APP_SECRET = os.environ["APP_SECRET"]
+          REFRESH_TOKEN = os.environ["REFRESH_TOKEN"]
+
+          # obtener access_token
+          data = {
+              "grant_type": "refresh_token",
+              "refresh_token": REFRESH_TOKEN,
+              "client_id": APP_KEY,
+              "client_secret": APP_SECRET
+          }
+          r = requests.post(token_url, data=data)
+          access = r.json()["access_token"]
+
+          headers = {
+              "Authorization": f"Bearer {access}",
+              "Content-Type": "application/octet-stream",
+              "Dropbox-API-Arg": json.dumps({
+                  "path": "/data_procesada/digesto_relaciones.csv",
+                  "mode": "overwrite",
+                  "autorename": False
+              })
+          }
+
+          with open("data_procesada/digesto_relaciones.csv", "rb") as f:
+              requests.post(upload_url, headers=headers, data=f.read())
+
+          EOF
+
+        
+
+      # ------------------------------
+      # 7) Construir telaraña
+      # ------------------------------
+      - name: 7) Construir telaraña jurídica
         run: python scripts/construir_telaraña.py
 
       - name: FIN
